# libsamplerate

./: .bzrignore  .gitattributes  .gitignore  .travis.yml  Announce.txt  CMakeLists.txt  ChangeLog  INSTALL  Make.bat  Makefile.am  NEWS  README  README.md  SRC.xcf  acinclude.m4  api_misc.html  api_simple.html  appveyor.yml  autogen.sh  bugs.html  config.h.cmake  config.h.in  configure.ac  fast_stereo_hack.diff  generate_filter.m  history.html  libsamplerate.spec.in  make_src_filter.m  measure_filter.m  quality.html  rabbit.ps  rabbit.xcf  reconf  reconfigure.mk  retoolize  samplerate.pc.in  win32.html
.github/workflows/: build.yml
FIR-POLY/: Makefile  demin.cc  fir_interp.cc  mag_spectrum.cc  mag_spectrum.hh  timeline.m
NuttX/: Kconfig  Make.defs
Octave/: Readme.md  generate_filter.m  make_filter.m  measure_filter.m
Win32/: Makefile.am  Makefile.mingw.in  Makefile.msvc  config.h  libsamplerate-0.def  libsamplerate.def  sndfile.h  unistd.h
android/: .gitignore  build.gradle.kts  ndk-test.sh  settings.gradle.kts
android/aar-template/: AndroidManifest.xml
android/aar-template/prefab/: prefab.json
android/gradle/: libs.versions.toml
cmake/: ClipMode.cmake  FindFFTW.cmake  FindFFTW3.cmake  FindSndfile.cmake
doc/: Makefile.am  SRC.css  api.html  api_callback.html  api_full.html  api_misc.html  api_simple.html  bugs.html  download.html  faq.html  fb2k.html  history.html  index.html  license.html  lists.html  procedure.html  quality.html  whypay.html  win32.html
docs/: CMakeLists.txt  SRC.css  _config.yml  android.md  api.md  api_callback.md  api_full.md  api_misc.md  api_simple.md  bugs.md  download.md  faq.md  history.md  index.md  license.md  lists.md  quality.md  win32.md
docs/_layouts/: default.html
examples/: CMakeLists.txt  Makefile.am  audio_out.c  audio_out.h  config.h.in  sndfile-resample.c  timewarp-file.c  varispeed-play.c
include/: samplerate.h
m4/: clip_mode.m4
src/: CMakeLists.txt  Makefile.am  Version_script.in  check_asm.sh  common.h  config.h.in  fastest_coeffs.h  fip_best.h  float_cast.h  high_qual_coeffs.h  insanity.h  libsamplerate.exports  mid_qual_coeffs.h  old_mid_qual_coeffs.h  samplerate.c  samplerate.h  src_config.h  src_fir_iir_poly.c  src_linear.c  src_sinc.c  src_zoh.c
tests/: CMakeLists.txt  Makefile.am  _kiss_fft_guts.h  benchmark.c  calc_snr.c  calc_snr.h  callback_hang_test.c  callback_test.c  chunked_test.c  clone_test.c  config.h.in  downsample_test.c  float_short_test.c  kiss_fft.c  kiss_fft.h  misc_test.c  multi_channel_test.c  multichan_throughput_test.c  nullptr_test.c  reset_test.c  simple_test.c  snr_bw_test.c  src-evaluate.c  streaming_test.c  termination_test.c  throughput_test.c  util.c  util.h  vari_streaming_test.c  varispeed_test.c
